# birdnetfs

./: .copier-answers.yml  .gitignore  .gitmodules  .pre-commit-config.yaml  README.md  analyse.py  analyse.sh  config.py  config_connection.yaml  extract.py  extract_parser.py  files_to_analyze.csv  pyproject.toml  requirements.txt  to_annotation_sheet.sh  utils.py
src/: analyse.py  analysefs.py  config.py  extract.py  extract_parser.py  global_sampler.py  parse_results.py  utils.py
