[project]
authors = [
  {name = "Benjamin Cretois", email = "benjamin.cretois@nina.no"}
]
# PEP 621 project metadata
# See https://www.python.org/dev/peps/pep-0621/
dependencies = [
  # from birdnet requirements.txt
  "librosa==0.9.2",
  "resampy",
  "tensorflow==2.15.0",
  "gradio",
  "pywebview",
  "tqdm",
  "bottle",
  "requests",
  "keras-tuner",
  # my birdnet
  "fsspec",
  "fs[ssh]",
  "pyarrow",
  "numpy",
  "tenacity"
]
description = ""
license = {text = "GPL-3.0+"}
name = "birdnetfs"
readme = "README.md"
requires-python = ">=3.10"
version = "0.1.0"

[project.optional-dependencies]
tools = [
  "pre-commit"
]

[tool.ruff]
fix = true

[tool.ruff.lint]
ignore = ["COM812"]
select = ["E", "W", "I", "F", "UP", "S", "B", "A", "COM", "LOG", "PTH", "Q"]
